add config for render

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# Database
+# Database (for local Docker setup)
 POSTGRES_USER=gestionale
 POSTGRES_PASSWORD=gestionale_password
 POSTGRES_DB=gestionale_db
@@ -9,5 +9,8 @@ SECRET_KEY=your-secret-key-change-in-production
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# Frontend
+# Frontend URL (for CORS - set to your production frontend URL)
+FRONTEND_URL=http://localhost:3000
+
+# Frontend (API URL the frontend should connect to)
 REACT_APP_API_URL=http://localhost:8000
