--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,11 +8,13 @@
     "react-router-dom": "^6.20.0",
     "react-scripts": "5.0.1",
     "axios": "^1.6.2",
-    "jwt-decode": "^4.0.0"
+    "jwt-decode": "^4.0.0",
+    "serve": "^14.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "serve": "serve -s build -l 3000",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
