fix: correct backend URL in render.yaml for frontend API calls
- Fixed REACT_APP_API_URL from 'gestionale-backend.onrender.com' to 'gestionale-backend-ztow.onrender.com'
- Added BACKEND_URL environment variable for backend service
- Added documentation for troubleshooting and redeployment process

This will trigger automatic rebuild of frontend with correct API URL.

Fixes: Unable to see or create expense groups in production web app

--- a/render.yaml
+++ b/render.yaml
@@ -24,6 +24,8 @@ services:
         value: 30
       - key: FRONTEND_URL
         value: https://gestionale-frontend-aa3q.onrender.com
+      - key: BACKEND_URL
+        value: https://gestionale-backend-ztow.onrender.com
     healthCheckPath: /api/health
 
   # Frontend React
@@ -35,7 +37,7 @@ services:
     plan: free
     envVars:
       - key: REACT_APP_API_URL
-        value: https://gestionale-backend.onrender.com
+        value: https://gestionale-backend-ztow.onrender.com
     routes:
       - type: rewrite
         source: /*
