feat: add Google OAuth authentication for login and registration
Implemented complete Google OAuth 2.0 flow for user authentication.
Users can now login/register using their Google account in addition
to the traditional email/password method.

## Backend Changes

- Added authlib and httpx dependencies for OAuth
- Created new OAuth router (/api/oauth) with endpoints:
  * GET /google/login - Initiate Google OAuth flow
  * GET /google/callback - Handle OAuth callback
  * GET /google/status - Check OAuth configuration
- Updated main.py to include OAuth router
- Auto-create users from Google profile (email, given_name, family_name)
- Generate JWT token after successful OAuth

## Frontend Changes

- Created GoogleLoginButton component with Google branding
- Updated Login page with "Sign in with Google" button
- Updated Register page with "Sign in with Google" button
- Created GoogleCallback page to handle OAuth redirect
- Added routes for OAuth callback (/auth/google/*)
- Added visual separator "oppure" between methods

## Configuration

- Updated render.yaml with Google OAuth environment variables:
  * GOOGLE_CLIENT_ID (set in Render dashboard)
  * GOOGLE_CLIENT_SECRET (set in Render dashboard)
  * GOOGLE_REDIRECT_URI (frontend callback URL)
- Added comprehensive setup documentation

## Documentation

- Created GOOGLE_OAUTH_SETUP.md with:
  * Step-by-step Google Cloud Console setup
  * Local and production configuration
  * OAuth flow diagram
  * Troubleshooting guide
  * Security best practices

## Features

✅ One-click Google login/registration
✅ Auto-create user from Google profile
✅ Secure OAuth 2.0 flow
✅ Works in both development and production
✅ Fallback to email if name not provided
✅ Consistent UX with existing auth

## OAuth Flow

User clicks "Sign in with Google"
  → Backend initiates OAuth with Google
  → User authorizes on Google
  → Google redirects to backend callback
  → Backend exchanges code for user info
  → Backend creates/updates user in database
  →

--- a/render.yaml
+++ b/render.yaml
@@ -26,6 +26,12 @@ services:
         value: https://gestionale-frontend-aa3q.onrender.com
       - key: BACKEND_URL
         value: https://gestionale-backend-ztow.onrender.com
+      - key: GOOGLE_CLIENT_ID
+        sync: false  # Set in Render dashboard
+      - key: GOOGLE_CLIENT_SECRET
+        sync: false  # Set in Render dashboard
+      - key: GOOGLE_REDIRECT_URI
+        value: https://gestionale-frontend-aa3q.onrender.com/auth/google/callback
     healthCheckPath: /api/health
 
   # Frontend React
