--- a/frontend/public/manifest.json
+++ b/frontend/public/manifest.json
@@ -63,8 +63,8 @@
   ],
   "start_url": "/",
   "scope": "/",
-  "display": "standalone",
-  "display_override": ["window-controls-overlay", "standalone", "minimal-ui"],
+  "display": "fullscreen",
+  "display_override": ["window-controls-overlay", "fullscreen", "minimal-ui"],
   "theme_color": "#667eea",
   "background_color": "#f8f9fa",
   "orientation": "portrait-primary",
