--- a/twa-manifest.json
+++ b/twa-manifest.json
@@ -3,7 +3,7 @@
   "host": "gestionale-frontend-aa3q.onrender.com",
   "name": "Gestionale - Spese, Shopping, Palestra",
   "launcherName": "Gestionale",
-  "display": "fullscreen",
+  "display": "standalone",
   "themeColor": "#667EEA",
   "themeColorDark": "#000000",
   "navigationColor": "#000000",
@@ -20,8 +20,8 @@
     "path": "/home/matteo/Documenti/GitHub/Gestionale/android.keystore",
     "alias": "android"
   },
-  "appVersionName": "3",
-  "appVersionCode": 3,
+  "appVersionName": "1",
+  "appVersionCode": 1,
   "shortcuts": [
     {
       "name": "Spese",
@@ -66,5 +66,5 @@
     "fullscreen",
     "minimal-ui"
   ],
-  "appVersion": "3"
+  "appVersion": "1"
 }
